<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meow Letters</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity string resources -->
    <string name="title_activity_main">MainActivity</string>
    <string name="resume_game">Resume</string>
    <string name="new_game">New game</string>
    <string name="highscores">Highscores</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>

    <!-- Game Activity string resources -->
    <string name="title_activity_game">GameActivity</string>
    <string name="score_text">score</string>
    <string name="score">0</string>
    <string name="level_text">level</string>
    <string name="level">1</string>

    <!-- Highscores Activity string resources -->
    <string name="title_activity_highscores">HighscoresActivity</string>

    <!-- Settings Activity string resources -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preferences Fragment string resources -->
    <string name="pref_nickname">Change nickname</string>
    <string name="pref_alphabet">Alphabet</string>
    <string name="pref_alphabet_dialog_title">Choose alphabet</string>
    <string name="default_alphabet">ENGLISH</string>
    <string name="pref_sound">Sounds</string>

    <!-- Credits Activity string resources -->
    <string name="title_activity_about">AboutActivity</string>
    <!-- HTML formatted strings -->
    <string name="app_license"><![CDATA[App created by <a href="http://ana-balica.github.io/">Ana Balica</a>, licensed under <a href="https://github.com/ana-balica/meow_letters/blob/master/LICENSE">MIT</a>.]]></string>
    <string name="freepik_license"><![CDATA[Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>, <a href="http://tutsplus.com">TutsPlus</a> from <a href="http://www.flaticon.com">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>.]]></string>
    <string name="font_license"><![CDATA[<a href="http://www.fontsquirrel.com/fonts/pacifico">Pacifico</a> font by Vernon Adams, icensed under <a href="http://scripts.sil.org/OFL">SIL Open Font License v1.10</a>.]]></string>
    <!-- Short dummy strings -->
    <string name="dummy_app_license">App created by Ana Balica licensed under MIT.</string>
    <string name="dummy_freepik_license">Icons made by Freepic, TutsPlus from www.flaticon.com is licensed by Creative Commons BY 3.0.</string>
    <string name="dummy_font_license">Pacifico font by Vernon Adams, licenced under SIL Open Font License v1.10.</string>

    <!-- Game Over Activity string resources -->
    <string name="title_activity_game_over">GameOver</string>
    <string name="game_over">Game Over</string>

    <!-- Showcase string resources -->
    <string name="showcase_button_text">Got it</string>
    <string name="showcase_button_text_final">Play</string>
    <string name="step_1">The goal of the game is\nto create chains of\nconsecutive letters\nin alphabetical order.</string>
    <string name="step_2">Tap on letter to select it.</string>
    <string name="step_3">Tap on the second letter to create a chain.</string>
    <string name="step_4">To deselect a letter tap again.</string>
    <string name="step_5">The longer the chain\nthe better.</string>
    <string name="step_6">This is a timer. Once the timer is out, new letters will appear.</string>
    <string name="step_7">Keep the board clean\nand advance in level.</string>
    <string name="step_8">One last thing:\nyou can change the alphabet\nin settings.</string>
    <string name="step_9">Good luck and have fun :)</string>

</resources>
