<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/credits_margin">

    <TextView
        style="@style/activity_title"
        android:text="@string/credits" />

    <TextView
        style="@style/credits_entry"
        android:id="@+id/credits_app_license"
        android:text="@string/dummy_app_license" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/credits_delimiter_height"
        android:background="@color/pale_green" />

    <TextView
        style="@style/credits_entry"
        android:id="@+id/credits_freepik_license"
        android:text="@string/dummy_freepik_license" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/credits_delimiter_height"
        android:background="@color/pale_green" />

    <TextView
        style="@style/credits_entry"
        android:id="@+id/credits_font_license"
        android:text="@string/dummy_font_license" />
</LinearLayout>
