<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/menu_title_top_padding"
        android:paddingBottom="@dimen/menu_title_bottom_padding" />

    <Button
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:id="@+id/new_game_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/highscores"
        android:id="@+id/highscores_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settings_button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
