<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="anabalica.github.io.meowletters.GameActivity">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/timerBar"
        android:progressDrawable="@drawable/custom_progressbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progressbar_height"
        android:progress="100" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/timerBar"
        android:layout_above="@+id/gameGrid">

        <TextView
            android:id="@+id/level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_text"
            android:textColor="@color/pale_green"
            android:textSize="@dimen/level_text_size"
            android:layout_marginTop="@dimen/level_text_margin_top"
            android:layout_marginLeft="@dimen/level_text_margin_left"
            android:rotation="-90"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textColor="@color/pale_golden"
            android:textSize="@dimen/score_text_size"
            android:layout_below="@+id/level_text"
            android:layout_marginTop="@dimen/score_text_margin_top"
            android:layout_marginLeft="@dimen/score_text_margin_left"
            android:rotation="-90"/>

        <TextView
            android:id="@+id/finalLevel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textColor="@color/emerald"
            android:textSize="@dimen/level_size"
            android:layout_marginTop="@dimen/level_margin_top"
            android:layout_marginRight="@dimen/level_margin_right"
            android:text="@string/level" />

        <TextView
            android:id="@+id/finalScore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/score_size"
            android:text="@string/score"
            android:textColor="@color/golden"
            android:layout_marginTop="@dimen/score_margin_top"
            android:layout_marginRight="@dimen/score_margin_right"
            android:layout_below="@+id/finalLevel"/>

    </RelativeLayout>

    <anabalica.github.io.meowletters.customviews.SquareLinearLayout
        android:id="@+id/gameGrid"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/beige">

    </anabalica.github.io.meowletters.customviews.SquareLinearLayout>

    <TextView
        android:id="@+id/gameOverText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_alignBottom="@+id/gameGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/game_over_margin_bottom"
        android:textSize="@dimen/game_over_text_size" />

    <Button
        style="@style/menu_button"
        android:layout_width="fill_parent"
        android:text="@string/new_game"
        android:onClick="startNewGame"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignBottom="@+id/gameGrid"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/new_game_button_margin"/>

</RelativeLayout>
