<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="anabalica.github.io.meowletters.GameActivity">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/timerBar"
        android:progressDrawable="@drawable/custom_progressbar"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/timerBar"
        android:layout_above="@+id/gameGrid">

        <anabalica.github.io.meowletters.customviews.VerticalTextView
            android:id="@+id/level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_text"
            android:textColor="@color/pale_green"
            android:textSize="32sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="270dp"/>

        <anabalica.github.io.meowletters.customviews.VerticalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textColor="@color/pale_golden"
            android:textSize="32sp"
            android:layout_below="@+id/level_text"
            android:layout_marginLeft="262dp"/>

        <TextView
            android:id="@+id/level"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textColor="@color/emerald"
            android:textSize="125sp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="-20dp"
            android:text="@string/level" />

        <TextView
            android:id="@+id/score"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="50sp"
            android:text="@string/score"
            android:textColor="@color/golden"
            android:layout_marginTop="-40dp"
            android:layout_marginRight="80dp"
            android:layout_below="@+id/level"/>

    </RelativeLayout>

    <anabalica.github.io.meowletters.customviews.SquareTableLayout
        android:id="@+id/gameGrid"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/pale_green"
        android:padding="2dp"
        custom:rowsCount="5">

        <anabalica.github.io.meowletters.customviews.CustomTableRow
            style="@style/customtablerow_5_columns">

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_00"
                custom:row="0"
                custom:column="0"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_01"
                custom:row="0"
                custom:column="1"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_02"
                custom:row="0"
                custom:column="2"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_03"
                custom:row="0"
                custom:column="3"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_04"
                custom:row="0"
                custom:column="4"
                style="@style/letter_button"/>

        </anabalica.github.io.meowletters.customviews.CustomTableRow>

        <anabalica.github.io.meowletters.customviews.CustomTableRow
            style="@style/customtablerow_5_columns">

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_10"
                custom:row="1"
                custom:column="0"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_11"
                custom:row="1"
                custom:column="1"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_12"
                custom:row="1"
                custom:column="2"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_13"
                custom:row="1"
                custom:column="3"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_14"
                custom:row="1"
                custom:column="4"
                style="@style/letter_button"/>

        </anabalica.github.io.meowletters.customviews.CustomTableRow>

        <anabalica.github.io.meowletters.customviews.CustomTableRow
            style="@style/customtablerow_5_columns">

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_20"
                custom:row="2"
                custom:column="0"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_21"
                custom:row="2"
                custom:column="1"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_22"
                custom:row="2"
                custom:column="2"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_23"
                custom:row="2"
                custom:column="3"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_24"
                custom:row="2"
                custom:column="4"
                style="@style/letter_button"/>

        </anabalica.github.io.meowletters.customviews.CustomTableRow>

        <anabalica.github.io.meowletters.customviews.CustomTableRow
            style="@style/customtablerow_5_columns">

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_30"
                custom:row="3"
                custom:column="0"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_31"
                custom:row="3"
                custom:column="1"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_32"
                custom:row="3"
                custom:column="2"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_33"
                custom:row="3"
                custom:column="3"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_34"
                custom:row="3"
                custom:column="4"
                style="@style/letter_button"/>

        </anabalica.github.io.meowletters.customviews.CustomTableRow>

        <anabalica.github.io.meowletters.customviews.CustomTableRow
            style="@style/customtablerow_5_columns">

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_40"
                custom:row="4"
                custom:column="0"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_41"
                custom:row="4"
                custom:column="1"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_42"
                custom:row="4"
                custom:column="2"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_43"
                custom:row="4"
                custom:column="3"
                style="@style/letter_button"/>

            <anabalica.github.io.meowletters.customviews.SquareButton
                android:id="@+id/letter_button_44"
                custom:row="4"
                custom:column="4"
                style="@style/letter_button"/>

        </anabalica.github.io.meowletters.customviews.CustomTableRow>

    </anabalica.github.io.meowletters.customviews.SquareTableLayout>

</RelativeLayout>
